meego-keyboard (0.5.35~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#237202 - Completely transparent assets are referenced

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 16 Mar 2011 16:21:39 +0200

meego-keyboard (0.5.34-1) unstable; urgency=low

  * Fixes: NB#232103 - Caps mode to be ON in VKB while renaming a video
  * Fixes: NB#235444 - E-mail/URL VKB layout gets stuck when adding another layout in settings
  * Fixes: NB#235743 - VKB is disappearing for 1-2secs when its view changed from sym view to main view after device rotation.

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 16 Mar 2011 15:48:28 +0200

meego-keyboard (0.5.33-1) unstable; urgency=low

  * Fixes: NB#234589 - Word tracker shows up on phone number text edit
  * Fixes: NB#234432 - [TASK] Unify virtual keyboard + virtual keyboard toolbar closing behaviour
  * Fixes: NB#231633 - [TASK] Improve Rotation Appearance of VKB

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Tue, 08 Mar 2011 15:23:00 +0200

meego-keyboard (0.5.32-1) unstable; urgency=low

  * Fixes: NB#233350, [TASK] E-mail/url specific virtual keyboard layouts

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Tue, 08 Mar 2011 15:23:00 +0200

meego-keyboard (0.5.31-1) unstable; urgency=low

  * Fixes: NB#231074, [FEA] Action key highlight in vkb (not for picker)
  * Fixes: NB#218406, Cursor is moving to the end of the word when space bar is long pressed in a scenario.

 -- Kimmo Surakka <kimmo.surakka@nokia.com>  Fri, 04 Mar 2011 14:10:00 +0200

meego-keyboard (0.5.30-1) unstable; urgency=low

  * Fixes: NB#223273 - ± sign in virtual keyboard appends ± character for number content (Qt bug or IM bug?)
  * Fixes: NB#220954, With the vkb 'sym' view on the foreground,tapping on the 'done' button makes the layout to change before it gets closed.
  * Fixes: NB#218406, Cursor is moving to the end of the word when space bar is long pressed in a scenario.
